fix(api): expose export job json structurally
